--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 flask==2.3.2
 gunicorn==20.1.0
 dj-database-url==1.0.0
-pandas
-numpy 
-matplotlib
-seaborn
 scipy
 plotly
-streamlit
-Flask==2.3.2
-
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.21.0
+scipy>=1.9.0
+plotly>=5.0.0
+seaborn>=0.11.0
+matplotlib>=3.5.0
+openpyxl>=3.0.0
